testdata/baselines/reference/compiler/duplicateFunctionImplementationInJsFile.errors.txt
a.js(2,12): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== a.js (1 errors) ====
    function f() {}
    function f(a) {}
               ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
    